--- a/themes/default/partials/municipalities.htm
+++ b/themes/default/partials/municipalities.htm
@@ -21,8 +21,8 @@
 			</div><img class="rec-img fr-fic fr-dii" src="{{municipality.viewBag.cover}}">
 			<div class="txt-container">
 
-				<p class="name">{{municipality.viewBag.title}}</p><img class="separator separator-mun fr-fic fr-dii" src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/small-yellow-separator.svg">
-				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}{{municipality.viewBag.url}}">{{'Conocer municipio'|_}} <img src="http://localhost:8888/cadizturismo/plugins/rainlab/pages/assets/svg/link-icon.svg" class="fr-fic fr-dii"></a></div>
+				<p class="name">{{municipality.viewBag.title}}</p><img class="separator separator-mun fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
+				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}{{municipality.viewBag.url}}">{{'Conocer municipio'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
 			</div>
 		</div>
 {% endfor %}
