--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -4950,7 +4950,7 @@ nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:hover:after, na
   padding-top: 20px !important;
   padding-bottom: 20px !important; }
 
-.control-treeview ol > li > div span.comment {
+.control-treeview ol > li > div span.comment, .control-filelist.filelist-hero ul li > a span.description {
   margin-bottom: 0px;
   color: #CECECE;
   font-size: 11px; }
