--- a/plugins/rainlab/pages/assets/css/style-village.css
+++ b/plugins/rainlab/pages/assets/css/style-village.css
@@ -498,7 +498,8 @@
               color: white;
               font-size: 16px;
               line-height: 22px;
-              margin-left: 11px; }
+              margin-left: 11px;
+              font-family: 'AvenirNext-Medium' !important; }
             .all-exps .all-events-container .event .txt-container .icons-nat .icon-pair:first-child {
               margin-right: 30px; }
         .all-exps .all-events-container .event .txt-container .icons {
