--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -305,6 +305,19 @@
               max-width: 23px;
             }
           }
+          .main-events-container .event .txt-container .icons .icon-pair {
+            display: -webkit-box;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            img {
+              max-width: 23px;
+            }
+          }
             .main-section-comarcas .main-events-container .event .txt-container .icons .icon-pair p {
               margin-bottom: 0px;
               color: white;
@@ -437,6 +450,7 @@
       z-index: 10;
       position: absolute;
       top: 235px;
+      max-height: 100px;
 
     }
     .txt-container {
