--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -35,7 +35,15 @@ code = "que-hacer"
             $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
         }
 
-}
+    }
+
+    function onMailExperience(){
+
+    $mail = $_POST['mail'];
+    $this->staticApp->sendMailExperience($mail, $this->page->url);
+
+  }
+
 
 ?>
 
@@ -69,6 +77,7 @@ code = "que-hacer"
     {% component 'staticPage' %}
 
     <div class="vertical-share">
+        
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
         <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{url('/')}}/{{lang}}{{urlPage}}" target="_blank">Facebook&nbsp;</a>
             <span>·</span>
@@ -78,6 +87,8 @@ code = "que-hacer"
         </div>
     </div>
 
+   
+
     {% partial 'site/footer' %}
 
     <!-- SCRIPTS -->
@@ -85,8 +96,11 @@ code = "que-hacer"
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
-
+    <script src="{{ 'assets/js/app.js'|theme }}"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
+    
 
+    {% framework %}
+    
   </body>
 </html>
