--- a/themes/default/partials/site/searchruta.htm
+++ b/themes/default/partials/site/searchruta.htm
@@ -1,14 +1,14 @@
 ==
 
-<?php 
+<?php
 
   function onStart()
   {
-    
+
     $this['lang']=\App::getLocale();
     if($this['lang']==''){
       $this['lang']='es';
-    } 
+    }
 
     $this['municipalities'] = $this->staticApp->getMunicipalities();
     $this['categories'] = $this->staticApp->getRutasCategories();
@@ -18,11 +18,11 @@
 
 ==
 
-<div class="search-bar-container">
+<div id="search-rutas" class="search-bar-container">
   <div class="search-bar">
     <form data-request="onFindRuta">
       <div class="inputs-container">
-        
+
         <div id="event-category" class="days-container">
           <select class="custom-select select-days" name="category">
             {% for key,value in categories %}
@@ -32,7 +32,7 @@
           <span class="select-title">{{ 'CATEGORÍA'|_ }}</span>
         </div>
 
-        <div class="days-container">
+        <div id="event-datepicker" class="interests-container">
           <select class="custom-select select-days" name="days">
             {% for i in 1..3 %}
               {% if i<2 %}
@@ -44,7 +44,7 @@
           </select>
           <span class="select-title">{{ 'TU ESTANCIA'|_ }}</span>
         </div>
-        
+
         <div id="event-location" class="type-container">
           <select class="custom-select select-type" name="location">
             {% for key,value in municipalities %}
@@ -53,7 +53,7 @@
           </select>
           <span class="select-title">{{ 'UBICACIÓN'|_ }}</span>
         </div>
-      
+
       <div class="button-container">
         <input type="submit" value="{{ 'Ver rutas'|_ }}">
       </div>
