--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -424,11 +424,15 @@
           position: relative;
           top: 5px;
           margin-right: 13px; }
-        .section-txt .txt-container .municipios .municipio p {
+        .section-txt .txt-container .municipios .municipio a {
           color: #4A4A4A;
           font-size: 18px;
           line-height: 33px;
           font-weight: 300; }
+          .section-txt .txt-container .municipios .municipio a:hover, .section-txt .txt-container .municipios .municipio a:focus, .section-txt .txt-container .municipios .municipio a:active {
+            text-decoration: none;
+            outline: none;
+            opacity: 0.7; }
   .section-txt iframe {
     width: 100%;
     height: 665px;
