--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -437,11 +437,16 @@
           top: 5px;
           margin-right: 13px;
         }
-        p {
+        a {
           color: #4A4A4A;
           font-size: 18px;
           line-height: 33px;
           font-weight: 300;
+          &:hover, &:focus, &:active {
+            text-decoration: none;
+            outline: none;
+            opacity: 0.7;
+          }
         }
       }
     }
