--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -413,6 +413,7 @@ html, body {
 
 .header-village .txt, .header-comarca .txt, .header-playa .txt {
   font-size: 200px;
+  line-height: 168px;
   transform: rotate(-9deg);
   text-align: center; }
 
@@ -1914,6 +1915,8 @@ html, body {
     line-height: 200px !important; } }
 
 @media (max-width: 600px) {
+  .con-encanto {
+    font-size: 100px !important; }
   .all-exps .search-title-container, .all-events .search-title-container {
     top: -65px !important; }
   .all-exps .search-title-container .title-search, .all-events .search-title-container .title-search {
@@ -2179,7 +2182,8 @@ html, body {
     width: 100% !important; }
   .inputs-container {
     width: 100%;
-    height: 50% !important; }
+    height: 50% !important;
+    flex-wrap: wrap; }
   .search-bar-container {
     width: 90% !important;
     height: 177px !important;
@@ -2218,6 +2222,10 @@ html, body {
   .search-bar-container .search-bar .button-container input {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px; }
+  #search-rutas .button-container {
+    height: 100% !important; }
+  #search-rutas #interests-ruta {
+    width: 36% !important; }
   .more-content {
     margin-bottom: 20px !important; }
   .section-txt {
