--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -205,6 +205,7 @@
   position: relative;
   background-color: white;
   z-index: 50;
+  margin-bottom: 100px;
 
   #container-rutas {
     margin-top: -227px;
@@ -291,7 +292,8 @@
           display: -webkit-flex;
           display: flex;
           flex-direction: row;
-          align-items: center; }
+          align-items: center;
+          margin-left: 14px; }
           .main-section-comarcas .main-events-container .event .txt-container .icons .icon-pair {
             display: -webkit-box;
             display: -moz-box;
@@ -304,6 +306,9 @@
             img {
               max-width: 23px;
             }
+          }
+          .con-encanto {
+            font-size: 121px;
           }
           .main-events-container .event .txt-container .icons .icon-pair {
             display: -webkit-box;
