--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2085,6 +2085,9 @@ html, body {
   }
 
 @media (max-width: 600px) {
+  .con-encanto {
+    font-size: 100px !important;
+  }
   .all-exps .search-title-container, .all-events .search-title-container {
     top: -65px !important; }
     .all-exps .search-title-container .title-search, .all-events .search-title-container .title-search {
@@ -2353,7 +2356,8 @@ html, body {
     width: 100% !important; }
   .inputs-container {
     width: 100%;
-    height: 50% !important; }
+    height: 50% !important;
+    flex-wrap: wrap;}
   .search-bar-container {
     width: 90% !important;
     height: 177px !important;
@@ -2392,6 +2396,12 @@ html, body {
         .search-bar-container .search-bar .button-container input {
           border-bottom-left-radius: 4px;
           border-bottom-right-radius: 4px; }
+          #search-rutas .button-container {
+            height: 100% !important;
+          }
+          #search-rutas #interests-ruta {
+            width: 36% !important;
+          }
   .more-content {
     margin-bottom: 20px !important; }
   .section-txt {
