--- a/themes/default/partials/site/searchruta.htm
+++ b/themes/default/partials/site/searchruta.htm
@@ -32,7 +32,7 @@
           <span class="select-title">{{ 'CATEGORÍA'|_ }}</span>
         </div>
 
-        <div id="event-datepicker" class="interests-container">
+        <div id="interests-ruta" class="interests-container">
           <select class="custom-select select-days" name="days">
             {% for i in 1..3 %}
               {% if i<2 %}
