--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1324,6 +1324,7 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
 }
 .control-treeview ol > li > div {
   background: #F6F6F6;
+  min-height: 70px;
   a {
     color: #818181;
     font-weight: 600;
