--- a/modules/backend/views/mail/restore.htm
+++ b/modules/backend/views/mail/restore.htm
@@ -2,12 +2,11 @@ subject = "Password Reset"
 layout = "system"
 description = "Reset an admin password"
 ==
-Hello {{ name }}
+Hola {{ name }}
 
-Somebody has requested a password reset for your account, if this was not you, please ignore this email.
-
-You can use the following link to restore your password:
+Hemos recibido una solicitud para recuperar la contraseña de tu cuenta en Cádiz.
+Si no has solicitado la recuperación de tu contraseña, ignora este e-mail.
 
 {% partial 'button' url=link type='positive' body %}
-Restore password
+Nueva contraseña
 {% endpartial %}
