--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -4760,7 +4760,7 @@ body.outer .layout > .layout-row > .layout-cell .outer-form-container .horizonta
   margin-top: 40px;
   transition: background-color 0.3s ease; }
 
-body.outer .layout > .layout-row > .layout-cell .outer-form-container .horizontal-form .restore-button {
+body.outer .layout > .layout-row > .layout-cell .outer-form-container .horizontal-form .restore-button, body.outer .layout > .layout-row > .layout-cell .outer-form-container .horizontal-form .pull-right {
   margin-top: 120px; }
 
 body.outer .layout > .layout-row > .layout-cell .outer-form-container .horizontal-form button:hover {
