--- a/themes/default/partials/site/headerexp.htm
+++ b/themes/default/partials/site/headerexp.htm
@@ -45,7 +45,7 @@
 <div id="modal-success"> <!-- data-iziModal-fullscreen="true"  data-iziModal-title="Welcome"  data-iziModal-subtitle="Subtitle"  data-iziModal-icon="icon-home" -->
     <!-- Modal content -->
     <div class="modal-container">
-      <img src="{{preurl}}/storage/app/media/uploaded-files/templates/sent-icon.svg">
+      <img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/sent-icon.svg">
       <h3>{{'Tu experiencia ya ha llegado a tu correo'|_}}</h3>
       <p>{{'Te hemos enviado la experiencia a tu correo, disfruta de Cádiz como nunca antes.'|_}}</p>
       <a href="#" data-izimodal-close="#modal-success" data-izimodal-open="#modal-exp">{{'¿No recibes tu experiencia?'|_}}</a>
