--- a/themes/default/layouts/playa.htm
+++ b/themes/default/layouts/playa.htm
@@ -34,7 +34,9 @@ code = "que-hacer"
         $this['urlPage'] = $this->page->url;
 
         if($this->page->apiBag){
-            $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+            if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
+                $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+            }
         }
 
     }
