--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -31,7 +31,9 @@ code = "que-hacer"
                 $this['urlPage'] = $this->page->url;
 
         if($this->page->apiBag)
-            $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+            if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
+                $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+            }
         }
 
 ?>
